samples/_failures_safe/1761462388_6376d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95339b7d.c: In function ‘main’:
./samples/SAFE/__tmp_95339b7d.c:189:5: error: expected identifier or ‘(’ at end of input
  189 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_95339b7d.c:189:5: error: expected declaration or statement at end of input
